@startuml

title __DETTAGLIDOC's Class Diagram__\n

  namespace com.woonders.lacemscommon {
    namespace fattureincloud {
      namespace network.response {
        namespace dettaglidoc {
          class com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse {
              + DettagliDocResponse()
              + DettagliDocResponse()
              {static} + builder()
              + getDettagliDocumento()
              + setDettagliDocumento()
              + toString()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace fattureincloud {
      namespace network.response {
        namespace dettaglidoc {
          class com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse.DettagliDocResponseBuilder {
              + build()
              + dettagliDocumento()
              + toString()
              ~ DettagliDocResponseBuilder()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace fattureincloud {
      namespace network.response {
        namespace dettaglidoc {
          class com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento {
              ~ linkDocumentoPdf : String
              + DettagliDocumento()
              + DettagliDocumento()
              {static} + builder()
              + getLinkDocumentoPdf()
              + setLinkDocumentoPdf()
              + toString()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace fattureincloud {
      namespace network.response {
        namespace dettaglidoc {
          class com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento.DettagliDocumentoBuilder {
              - linkDocumentoPdf : String
              + build()
              + linkDocumentoPdf()
              + toString()
              ~ DettagliDocumentoBuilder()
          }
        }
      }
    }
  }
  

  com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse -up-|> com.woonders.lacemscommon.fattureincloud.network.response.BaseResponse
  com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse o-- com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento : dettagliDocumento
  com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse +-down- com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse.DettagliDocResponseBuilder
  com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocResponse.DettagliDocResponseBuilder o-- com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento : dettagliDocumento
  com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento +-down- com.woonders.lacemscommon.fattureincloud.network.response.dettaglidoc.DettagliDocumento.DettagliDocumentoBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
